...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TZD-Wh-UcR">
                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                <state key="normal" title="Log Out">
                                    <color key="titleColor" red="0.27334523199999999" green="0.31650373339999999" blue="0.38334438199999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                        <subviews>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1Wy-r4-IiY">
                                                <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
                                                <constraints>
...
                                                </variation>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xBu-9e-snB">
                                                <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
                                                <constraints>
...
                                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WNu-46-kD5" userLabel="Register">
                                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                                <state key="normal" title="Register">
...
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ctt-mD-2Ti" userLabel="Login">
                                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
                                                <color key="backgroundColor" red="1" green="0.3411764706" blue="0.1333333333" alpha="1" colorSpace="calibratedRGB"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                        <subviews>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Retype Password" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="qAc-ix-XJd">
                                                <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
                                                <constraints>
...
                                                </variation>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fkn-RL-wfz">
                                                <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
                                                <constraints>
...
                                                </variation>
                                            </textField>
                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Last Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dTs-lL-aLP">
                                                <rect key="frame" x="0.0" y="-30" width="97" height="30"/>
                                                <constraints>
...
